--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "next-auto-intergration",
+    "name": "calendar",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -21,13 +21,16 @@
         "@types/react-dom": "18.0.4",
         "@typescript-eslint/eslint-plugin": "^5.25.0",
         "@typescript-eslint/parser": "^5.0.0",
+        "autoprefixer": "^10.4.7",
         "commitlint": "^17.0.0",
         "eslint": "8.15.0",
         "eslint-config-next": "12.1.6",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "husky": "^8.0.1",
+        "postcss": "^8.4.14",
         "prettier": "^2.6.2",
+        "tailwindcss": "^3.0.24",
         "typescript": "4.6.4"
     }
 }
